[project]
name = "numstat"
authors = [
    {name = "Max Worsley", email = "maxworsley@outlook.com"},
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

dependencies = [
    "fastapi==0.105.0",
]

[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"
